# kata-range-tendencias

./: README.md  kata_range.py  kata_range_test.py
kata_range_package/: README.md  pyproject.toml
